app/assets/stylesheets/posts.css.scss
/* Posts Styles
================ */
.posts { 
	position: relative; 
	margin: 1rem 1rem;
	
	.slideState { .back { top: 0 !important; } }

	// General Post Styles
	.post {

		float:left;
		width: 100%;
		margin: 0 auto;
		height: 70vh;
		background-color: white;
		-webkit-transition: all .65s linear;
		transition: all .65s linear;
		position: relative;
		overflow: hidden;
		margin-bottom: 10px;
		
		.front,
		.back {

		  display: block;
		  position: absolute;
		  width: 100%;
		  height: 100%;
		  -webkit-backface-visibility: hidden;
		  -moz-backface-visibility: hidden;
		  backface-visibility: hidden;
		  left: 0;
			// border-radius: 3px;
			margin: 0;
		}
	}
}

/* Lightbox
====================== */
#lightbox {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0,0,0,0.7);
	padding: 50px 7.5px;
  text-align: center;
  cursor: pointer;
  display: none;
  z-index: 100;
  
  #lightbox-full {

  	display: block;
    position: relative;
    width: 100%;
    height: 100%;
    white-space: no-wrap;
    background-repeat: no-repeat;
    background-position: center; 
    background-size: contain;
  }
}

/* Front Post Styles
===================== */
.front {
	text-transform: uppercase;
	cursor: pointer;
	overflow: hidden;
	transition: all .7s linear;
	top: 0;


	h1 { 
		color: white; 
		z-index: 10;
		padding-top: 10px; 
		font-weight: 800; 
		-webkit-user-select: none;
		-moz-user-select: none;
		position: absolute;
		text-align: center;
		font-size: 2rem;
		word-wrap: break-word;
	}
	.post-overlay { 
		width: 100%; 
		height: 100%;  
		position: absolute;
		background-color: rgba(0,0,0,.15);
	}
	.full-image { 
		// transition: filter .7s linear;
		// filter: blur(2px);  
		background-size: cover;
		width: 100%;
		height: 100%;
		padding: 0;
		margin: 0;
		z-index: -10;
	}
}


/* Back Post Styles
=================== */
.back {
	background-color: #fff;
	overflow: scroll;
	overflow-x: hidden;
	top: 100%;
	width: 100.1%;;
	transition: top .6s ease;
	z-index: 10;

	h3 { 
		a { color: #7CA6B0; }
		font-size: 11.5px; 
		display: inline-block; 
		margin: 0;
	}
	.close-button { 
		cursor: pointer; 
		position: absolute;
		right: 8px;
		width: 18px;
		top: -29px;

		#close-button-svg {
			stroke: rgba(151,151,151,.5);
		}
	}
	.fav {
		width: 100%;
		text-align: center;
	}
	.love-button {
	  transition: all 1s ease;
	  text-align: center;
	  display: inline-block;
	  text-decoration: none;
	  color: rgba(151,151,151,.3);
	  border: 1px solid rgba(151,151,151,.3);
	  padding: .2rem 2.5rem;
	  border-radius: .5rem;
	  font-weight: 800;
	  display: inline-block;
	  margin: 5px 0;
	  cursor: pointer;
    
    &:hover { 
		  color: red; 
		  border-color: red;
		}

		&.selected {
			color: red;
			border-color: red;
		}
	}

	// Post Info
	.post-info {
		position: relative;
		width: 100%;
		// margin: 10px inherit 15px 5px;
		margin: 0;
		padding-right: 0;
		padding-bottom: 15px;
		border-bottom: 1px solid #E6E6E6;
		box-shadow: 0px 1px 2px rgba(0,0,0,.1);

		.picture-column {
			position: absolute;
			height: 100%;
			width: 20%;
			left: 0;
			z-index: 10;
			text-align: center;
			padding-top: 7px;
		}
		.content {
			position: relative;
			padding-left: 20%;
			width: 100%;
			height: 100%;
		}
		.title { 
			font-size: 13.5px;
			margin-top: 5px;
			line-height: 135%;
			width: 80%;
		}
		.poster-profile-pic {
			img { width: 100%; height: 100%; }
			width: 50px;
			height: 50px;
			border-radius: 2px;
			background-color: white;
			margin: 0 auto;
		}
		.tags { display: inline; }
		.tag {
		  // font-size: .8125rem;
		  // text-align: center;
		  // display: inline;
		  // padding: .4375rem;
		  // background-color: #D8D8D8;
		  // border-radius: .1875rem;
		  display: inline-block;
		}
	}

	.lightbox-preview { 
		margin: 0 auto; 
		width: 100.02%;
		display: block;
		text-align: center;
		height: 150px;
		overflow: hidden;
		box-shadow: inset 0 1px 10px black;
		cursor: pointer;
	}
	.lightbox-thumb { 
		width: 100%;
		position: relative;
		margin-bottom: 1%;
		bottom: 25%;
	}
}

/* Back Post Form Styles
======================= */
.answers { 
	padding: 5px 0 10px; 
	// background-color: #ECF0F1;
}
.answer-form { padding: 6px; padding-bottom: 15px;}
.answer-input {
	border: 1px solid rgba(0,0,0,0.15);
	background-color: rgba(255,255,255,.47);
	border-radius: 5px;
	height: 34px;
	padding-left: 9px;
	width: 100%;
}
.answer-submit {
	border: 0;
	background-color: inherit;
	font-size: 16px;
	font-weight: 800;
	color: #637BD1;
	// width: 19%;
}


/* Answer Thread Styles
===================== */
.answer {
	border: 1px solid rgba(151,151,151,.14);
	background-color: #F3F3F3;
	&:nth-child(n+2){ border-radius: 0; }
	&:not(:last-child) { border-bottom: none; }
	border-right: none;
	border-left: none;	
	box-shadow: none;
	
	.post-info { border-bottom: none; box-shadow: none; }
	.answer-date { 
		font-size: 11px; 
		font-weight: 300;
		vertical-align: bottom;
		color: #a3a3a3; 
		margin: 0; 
		display: inline;
	}
	.profile-pic {
		border-radius: 5px;
		width: 38px;
		height: 38px;
		border-radius: 5px;
		margin-left: 5%;
	}
	.answer-username { padding-left: 15px; }
	.answer-text {
		width: 75%;
		font-weight: 300;
		font-size: 13px;
	}
	.best-answer { background-color: white; }
	.votes {
		display: inline;
		float: right;
		margin-right: 3%;
	}
	.add-favorite {
		padding-bottom: 5px;
		cursor: pointer;
		display: inline-block;
		&.selected {
			#checkmark {
				fill: #CAA5A5;
			}
		}
	}
	.checkmark {
		width: 21px;
		padding: 1px;
		height: 99%;
		-webkit-user-select: none;
		-moz-user-select: none;
		#checkmark-svg { 
			stroke-width: 5; 
			stroke: #CAA5A5; 
			fill: transparent; 
			// &.selected { fill: #CAA5A5; }
		}
	}
}

// Media Queries
@media (min-width: 49rem) {
	.posts {
		margin: 2rem 8rem;
		.col { float: left; }
		.post { 
			height: 400px; 
			padding: 10px; 
		}
		.half { 
			width: 49%; 
			margin-bottom: 1%;
			&:nth-child(even) { margin-right: 1%; }
			&:nth-child(odd) { margin-left: 1%; }
		}
	}
	.front h1 { font-size: 28px; }
	.answer-submit { width: 20%; }
}

@media (min-width: 49rem) and (max-width: 55rem) { 
	.front { h1 { font-size: 31px; } } 
}

.new-post { color: white; }

/* Post Show
==================== */
@media (min-width: 45rem) {
	.post-container {  
		margin: 0 auto;
	  max-width: 60rem;
	  width: 46%;  
		.post { height: 85vh; }
	}
	.front h1 { font-size: 36px; }
}

